
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;




typedef struct TYPE_9__ TYPE_5__ ;
typedef struct TYPE_8__ TYPE_3__ ;
typedef struct TYPE_7__ TYPE_2__ ;
typedef struct TYPE_6__ TYPE_1__ ;


struct TYPE_9__ {TYPE_1__** helpers; } ;
struct TYPE_8__ {int height; scalar_t__ width; } ;
struct TYPE_7__ {TYPE_3__* throbber; TYPE_3__* buttonA; TYPE_3__* top; TYPE_3__* window; TYPE_5__* parent; scalar_t__ msg; scalar_t__ title; scalar_t__ refresh; } ;
struct TYPE_6__ {int data; } ;
typedef int GXColor ;


 scalar_t__ FALSE ;
 int FONT_writeCenter (scalar_t__,int,int,scalar_t__,int,int ) ;
 int GUI_DrawMenu (TYPE_5__*) ;
 int Key_A_png ;
 int Key_B_png ;
 int LWP_JoinThread (int ,int *) ;
 scalar_t__ WHITE ;
 int bg_color ;
 int gxClearScreen (int ) ;
 int gxDrawTexture (TYPE_3__*,int,int,scalar_t__,int,int) ;
 int gxSetScreen () ;
 int gxTextureClose (TYPE_3__**) ;
 TYPE_2__ message_box ;
 int msgboxthread ;

void GUI_MsgBoxClose(void)
{
  if (message_box.refresh)
  {

    message_box.refresh = FALSE;
    LWP_JoinThread(msgboxthread, ((void*)0));


    int xwindow = 166;
    int ywindow = 160;
    int ypos = 248;


    int yoffset = 0;
    while (yoffset < (ywindow + message_box.window->height))
    {

      if (message_box.parent)
      {
        GUI_DrawMenu(message_box.parent);
      }
      else
      {
        gxClearScreen(bg_color);
      }


      gxDrawTexture(message_box.window,xwindow,ywindow-yoffset,message_box.window->width,message_box.window->height,230);
      gxDrawTexture(message_box.top,xwindow,ywindow-yoffset,message_box.top->width,message_box.top->height,255);


      if (message_box.title)
        FONT_writeCenter(message_box.title,20,xwindow,xwindow+message_box.window->width,ywindow+(message_box.top->height-20)/2+20-yoffset,(GXColor)WHITE);


      if (message_box.msg)
        FONT_writeCenter(message_box.msg,18,xwindow,xwindow+message_box.window->width,ypos-yoffset,(GXColor)WHITE);


      gxSetScreen();


      yoffset += 60;
    }

    if (message_box.parent)
    {

      if (message_box.parent->helpers[0])
        message_box.parent->helpers[0]->data = Key_B_png;
      if (message_box.parent->helpers[1])
        message_box.parent->helpers[1]->data = Key_A_png;


      GUI_DrawMenu(message_box.parent);
    }
    else
    {
      gxClearScreen(bg_color);
    }

    gxSetScreen();


    gxTextureClose(&message_box.window);
    gxTextureClose(&message_box.top);
    gxTextureClose(&message_box.buttonA);
    gxTextureClose(&message_box.throbber);
  }
}
